Fixed title art, reorganized title art, changed typeface, adjust blockquote spacing

--- a/style.css
+++ b/style.css
@@ -1,136 +1,26 @@
-.verticalline{
-	border-left:8px solid #000000;
-	height: 160px;
-	position: absolute;
-	margin-left: 125px;
-}
-
-#title-art{
-	font-family:"Montserrat", sans-serif;
-	font-size:100px;
-	font-weight:bolder;
-	margin-top:142px
-}
-
-
-#title-art > #letter:nth-child(1){
-	margin-left:50px;
-	padding-left:5px;
-	margin-left:50px;
-	transform: rotate3d(20, 10, -2, -10deg);	
-}
-
-#title-art > #letter:nth-child(2){
-	margin-top: 550px;
-	margin-left:50px;
-	padding-left:5px;
-	margin-top: 45px;
-	margin-left:80px;
-	transform: rotate3d(20, 10, -2, -10deg);
-}
-
-#title-art> .letter:nth-child(3){
-	margin-top: 45px;
-	margin-left:90px;
-	transform: rotate3d(0, 4,-2, -10deg);
-}
-
-#title-art> .letter:nth-child(4){
-	margin-top:-130px;
-	margin-left:100px;
-	transform: rotate3d(2,4,-2, 20deg);
-}
-/* .OO{ */
-	font-family:"Montserrat", sans-serif;
-	font-size:90px;
-	font-weight:bolder;
-	margin-top: 45px;
-	margin-left:90px;
-	transform: rotate3d(0, 4,-2, -10deg);
-}
-
-/* .K{ */
-	font-family:"Montserrat", sans-serif;
-	font-size:90px;
-	font-weight:bolder;
-	margin-top:-130px;
-	margin-left:100px;
-	transform: rotate3d(2,4,-2, 20deg);
-}
-
-.E{
-	font-family:"Montserrat", sans-serif;
-	font-size:90px;
-	font-weight:bolder;
-	margin-top:120px;
-	margin-left:180px;
-	transform: rotate3d(1-,4,-2, 20deg);
-}
-
-.D{
-	font-family:"Montserrat", sans-serif;
-	font-size:90px;
-	font-weight:bolder;
-	margin-top:-70px;
-	margin-left:175px;
-	transform: rotate3d(2,4,-2, 20deg);
-}
-
-#title{
-	font-family:"Montserrat", sans-serif;
-	font-size:80px;
-	font-weight:bolder;
-	letter-spacing: 0.7rem;
-	/* margin-left:290px; */
-	padding-left:450px;
-	margin-top:100px;
-	margin-bottom:100px;
-}
-
-#feeling{
-	font-family:"Montserrat", sans-serif;
-	font-size:80px;
-	font-weight:bolder;
-	letter-spacing: 0.7rem;
-	color: #7091ec;
-	padding-left:680px;
-	margin-top:-130px;
-	margin-bottom: 60px;
-
-}
-
-#authorname{
-	margin-left:auto;
-	margin-top:100px;
-	margin-right:70px;
-	border-top: 4px solid #000000;
-}
-
-#date{
-	margin-left:auto;
-	margin-bottom:50px;
-}
-
+/*general*/
 body{
 	font-family: "Inter", sans-serif;
 	font-size: 18px;
 	font-weight: 260;
 	padding-left: 100px;
 	padding-top:5px;
-	text-indent:40px;
 	text-align: start;
 	line-height:30px;
 	background-color:white;
-
-}
-
-.W::first-letter{
-	font-size:2rem;
-	font-weight:400;
 }
 
 em{
 	font-style: italic;
+}
+
+/*paragraph styles*/
+p{
+	text-indent:40px;	
+}
+
+p:nth-child(1){
+	margin-top:80px;
 }
 
 p:nth-child(even){
@@ -138,129 +28,202 @@ p:nth-child(even){
 	margin-bottom:20px;
 }
 
+/*paragraph styles*/
 blockquote{
-	font-family:"Futura",sans-serif;
+	font-family:"Poppins",sans-serif;
+	font-weight:bolder;
 	font-size:25px;
 	font-style: italic;
-	color:rgb(14, 10, 10);
+	color: #605243;
 	line-height: 40px;
-	margin-top:60px;
+	margin-top:50px;
 	margin-bottom:20px;
 }
 
-.RemKoolhaas{
-	font-family:"Futura",sans-serif;
-	font-size:25px;
-	font-style: italic;
-	color:rgb(14, 10, 10);
-	line-height: 40px;
-	margin-bottom:50px;
+/*headings*/
+h2{
+	margin-left:-43px;
+	font-size: 40px;
+	font-weight:bold;
+	margin-bottom:20px;
+	padding-left: 48px;
 }
 
-hr{
-	border: 3px solid #0000
-	border-radius: 1rem;
+h3{
+	font-weight:bolder;
+	padding-left: -20px;
+	margin-bottom:0px;
+	margin-top:150px;
 }
 
 article{
 	max-width:700px;
 }
 
-#readingresponse{
-	margin-left: auto;
-	padding-right:70px;
-	margin-right:70px;
-}
-
-/* #readingresponse h2{ */
-	font-family:montserrat, sans-serif;
-	font-weight:bold;
-	color: 000000;
-	font-size:25px;
-	margin-top: 100px;
-	margin-bottom: 50px;
-	margin-left:auto;
-	border-bottom: 4px solid #000000;
-
-#readingresponse{
-	font-family:"Montserrat", sans-serif;
-	font-weight:bold;
-	color: 000000;
-	font-size:25px;
-	margin-top: 100px;
-	margin-bottom: 50px;
-	margin-left:auto;
-	padding-left:400px;
-}
-
-.headingresponse{
-	border-bottom: 4px solid #000000;
-	margin-top:50px;
-	margin-bottom:50px;
-	margin-right:70px;
-}
-
-h3{
-	font-weight:bolder;
-	margin-left:-43px;
-	margin-bottom:10px;
-}
-
-.box1{
-	font-size:16px;
-	display:flex;
-	flex-direction: row-reverse;
-	padding-right:70px;
-	margin-top:-30px;
-}
-
-h2{
-	margin-left:-43px;
-	font-size: 40px;
-	font-weight:bold;
-}
-
-.Author-Title{
-	font-size:1.2rem;
-	font-weight:500;
-}
-
-Footer{
+/*footer*/
+footer{
 	font-size: 1rem;
-	/* border-top: 2px solid #000000; */
 	margin-right:100px; 
 	margin-bottom:50px;
 	margin-top:50px;
 	padding-left:auto;
 }
 
-.linktoarticle{ 
-	margin-top:10px;
-	margin-right:100px; 
-	margin-bottom:50px;
+/*author and titles styles*/
+.author-title{
+	font-size:1.2rem;
+	font-weight:500;
+}
+
+#author-name{
+	margin-top:100px;
+	margin-left:-10px;
+	margin-bottom:20px;
+	border-bottom: 4px solid #000000;
+	margin-right:100px;
+}
+
+#article-name{
+	margin-left:-43px;
+	font-size: 40px;
 	font-weight:bold;
+	margin-bottom:20px;
+	padding-left: 30px;
+}
+
+#article-date{
+	margin-bottom:50px;	
+	margin-left:-50px;
+}
+
+.remKoolhaas{
+	font-family:"Poppins",sans-serif;
+	font-weight:bolder;
+	font-size:25px;
+	font-style: italic;
+	color: #605243;
+	line-height: 50px;
+}
+
+.reading-response-title{
+	border-bottom: 4px solid #000000;
+	margin-top:50px;
+	margin-bottom:50px;
+	margin-right:100px;	
+}
+
+/*article-and-reading-response-styles*/
+.p3{
+	margin-top:80px;
+	margin-bottom:20px;
+}
+
+#reading-response{
+	font-family:inter, sans-serif;
+	font-weight:50px;
+	margin-left: auto;
+	padding-right:50px;
+	margin-right:100px;
+	font-size:18px;
+	margin-top: 100px;
+	margin-bottom:70px;
+	padding-left:30px;
+}
+
+.W::first-letter{
+	font-size:2rem;
+	font-weight:400;
+}
+
+/* link-and-citation-styles*/
+.link{ 
+	margin-top:10px;
+	font-weight:bold;
+	font-size:16px;
 	text-decoration-line:underline;
-	color:blue
+	color: #605243
 }
 
 #citation{
 	text-align: center;
 }
-#myBtn {
-	display: none; 
-	position: fixed; 
-	bottom: 35px; /* Place the button at the bottom of the page */
-	right: 30px; /* Place the button 30px from the right */
-	z-index: 99; /* Make sure it does not overlap */
-	border: none; /* Remove borders */
-	outline: none; /* Remove outline */
-	background-color: rgb(40, 26, 26); /* Set a background color */
-	color: white; /* Text color */
-	cursor: pointer; Add a mouse pointer on hover
-	border-radius: 20px; Rounded corners
-	font-size: 12px; /* Increase font size */
+
+/*scroll-button-styles */
+#scroll-top {
+	position: fixed;
+	padding:0 8px;
+	bottom: 35px;
+	right: 30px;
+	border: none;
+	outline: none;
+	background-color: #000000; 
+	color: white;
+	cursor: pointer; 
+	border-radius: 10px;
+	font-size: 12px; 
   }	
   
-  #myBtn:hover {
-	background-color: #555; /* Add a dark-grey background on hover */
-  }
+#scroll-top:hover {
+	background-color: #555; /* Dark-grey background when hover */
+}
+
+/*title-art*/
+.verticalline{
+	border-left:6px solid #605243;
+	height: 163px;
+	position: absolute;
+	margin-left: 225px;
+}
+
+#title-art{
+	font-family:"Playfair Display", serif;
+	font-size:100px;
+	font-weight:bolder;
+	margin-top:142px;
+	position: relative;
+	height:400px;
+}
+
+#title-art .letter{
+	position: absolute;
+}
+
+#title-art > .letter:nth-child(1){
+	left:190px;
+	transform: rotate3d(20, 10, -2, -10deg);	
+}
+
+#title-art > .letter:nth-child(2){
+	top:60px;
+	left:159px;
+	transform: rotate3d(50, 5, 10, 0deg);
+}
+
+#title-art> .letter:nth-child(3){
+	top:115px;
+	left:130px;
+	transform: rotate3d(0, 4,-2, -10deg);
+}
+
+#title-art> .letter:nth-child(4){
+	top:170px;
+	left:105px;
+	transform: rotate3d(1,0,50,5deg);
+}
+
+#title-art> .letter:nth-child(5){
+	top:240px;
+	left:145px;
+	transform: rotate3d(10,-50,50,2deg);
+}
+
+#title-art> .letter:nth-child(6){
+	top:290px;
+	left:197px;
+	transform: rotate3d(0,0,-20, -100deg);
+}
+
+#title-art> .letter:nth-child(7){
+	top:350px;
+	left:400px;
+}
